chore : add a notebook to simplify setup on google colab

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,54 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "page_content='Symbol: MMM\n",
-      "Name: 3M Company\n",
-      "Sector: Industrials\n",
-      "Price: 222.89\n",
-      "Price/Earnings: 24.31\n",
-      "Dividend Yield: 2.3328617\n",
-      "Earnings/Share: 7.92\n",
-      "52 Week Low: 259.77\n",
-      "52 Week High: 175.49\n",
-      "Market Cap: 138721055226\n",
-      "EBITDA: 9048000000\n",
-      "Price/Sales: 4.3902707\n",
-      "Price/Book: 11.34\n",
-      "SEC Filings: http://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=MMM' metadata={'source': './data/constituents-financials.csv', 'row': 0}\n",
-      "page_content='Symbol: AOS\n",
-      "Name: A.O. Smith Corp\n",
-      "Sector: Industrials\n",
-      "Price: 60.24\n",
-      "Price/Earnings: 27.76\n",
-      "Dividend Yield: 1.1479592\n",
-      "Earnings/Share: 1.7\n",
-      "52 Week Low: 68.39\n",
-      "52 Week High: 48.925\n",
-      "Market Cap: 10783419933\n",
-      "EBITDA: 601000000\n",
-      "Price/Sales: 3.5754826\n",
-      "Price/Book: 6.35\n",
-      "SEC Filings: http://www.sec.gov/cgi-bin/browse-edgar?action=getcompany&CIK=AOS' metadata={'source': './data/constituents-financials.csv', 'row': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain_community.document_loaders.csv_loader import CSVLoader\n",
-    "\n",
-    "file_path = \"./data/constituents-financials.csv\"\n",
-    "\n",
-    "loader = CSVLoader(file_path=file_path)\n",
-    "data = loader.load()\n",
-    "\n",
-    "for record in data[:2]:\n",
-    "    print(record)"
+    "!git clone https://github.com/Ayyoub-ESSADEQ/golden-dataset-chatbot.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ./golden-dataset-chatbot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!chmod +x setup.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./setup.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -m requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python app.py"
    ]
   }
  ],
