chore : fix notebook issues

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -24,6 +24,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!chmod +x setup.sh"
    ]
   },
@@ -34,15 +43,6 @@
    "outputs": [],
    "source": [
     "!./setup.sh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -m requirements.txt"
    ]
   },
   {
